implemented dl-outputclass "table"

--- a/oxygen-framework/css/conbat/table-header.less
+++ b/oxygen-framework/css/conbat/table-header.less
@@ -24,7 +24,7 @@
 /*********************************************************/
 /* header for tgroup by attribute */
 
-*[class~='topic/tgroup'][*|header] > *[class~='topic/tbody'] > *[class~='topic/row']:first-child *[class~='topic/entry']:before(@{conbat-header-index}) {
+*[class~='topic/tgroup'][*|header] > *[class~='topic/tbody'] > *[class~='topic/row']:first-child > *[class~='topic/entry']:before(@{conbat-header-index}) {
     display	: block;
     
     /* Get text from header attribute of tgroup element */
