--- a/oxygen-framework/css/outputclasses/dl-outputclasses.less
+++ b/oxygen-framework/css/outputclasses/dl-outputclasses.less
@@ -190,6 +190,98 @@
 
 
 /********************************************/
+/* outputclass: table 						*/
+
+*[class~='topic/dl'][outputclass='table'] {
+	display				: table;
+    width				: 95%;
+    margin				: 0.5ex 0.5ex 0.5ex 1.0ex;
+    border-color		: black;
+    border-style		: solid;
+    border-width		: 1px;
+    padding				: 0px;
+}
+
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlhead'] {
+	color: 		inherit;
+	background-color: @table-header-background;
+}
+
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlentry'],
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlhead'] {
+	display				: table-row;
+}
+
+/**[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlentry'] > *[class~='topic/dt'] {
+	font-weight			: normal;
+}*/
+
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlentry'] > *[class~='topic/dd'],
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlentry'] > *[class~='topic/dt'],
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlhead'] > *[class~='topic/ddhd'],
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlhead'] > *[class~='topic/dthd'] {
+	display				: table-cell;
+    padding				: 1px 5px;
+}
+
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlentry']:not(:first-child) > *[class~='topic/dd'],
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlentry']:not(:first-child) > *[class~='topic/dt'],
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlhead']:not(:first-child) > *[class~='topic/ddhd'],
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlhead']:not(:first-child) > *[class~='topic/dthd'] {
+    border-top		: @table-border;
+}
+
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlentry'] > *[class~='topic/dd'],
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlhead'] > *[class~='topic/ddhd']{
+	border-left		: @table-border;
+}
+
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlentry'] > *[class~='topic/dt'],
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlhead'] > *[class~='topic/dthd'] {
+	width		: 35%;
+}
+
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlentry'] > *[class~='topic/dd'],
+*[class~='topic/dl'][outputclass='table'] > *[class~='topic/dlhead'] > *[class~='topic/ddhd'] {
+	width		: 65%;
+}
+
+*[class~='topic/dl'][outputclass='table'] *[class~='topic/dd'] > *:first-child,
+*[class~='topic/dl'][outputclass='table'] *[class~='topic/dd'] > *[class~="topic/div"]:first-child > *:first-child {
+	margin-top: 0;
+}
+
+*[class~='topic/dl'][outputclass='table'] *[class~='topic/dd'] > *:last-child,
+*[class~='topic/dl'][outputclass='table'] *[class~='topic/dd'] > *[class~="topic/div"]:last-child > *:last-child {
+	margin-bottom: 0;
+}
+
+*[class~='topic/dl'][outputclass='table'] *[class~='topic/dd'] > *[class~="topic/sli"] {
+	margin-left: 1em;
+}
+
+*[class~='topic/dl'][outputclass='table'][*|header] > *[class~='topic/dlentry']:first-child > *:before(@{conbat-header-index}) {
+    display	: block;
+    
+    /* Get text from header attribute of tgroup element */
+    content	: oxy_xpath(oxy_concat("tokenize(ancestor::*[contains(@class, ' topic/dl ')]/@*:header, '[|]')[", oxy_xpath("count(preceding-sibling::*) + 1"), "]"));
+    
+    /* Same settings as the real table header */
+    .table-header;
+    
+    /* draw a line to seperate header from row */
+    border-bottom	: @table-border;
+    
+    /* Undo the padding of the entry to avoid a white gap */
+    margin-top:     -1px;
+    margin-left:    -5px;
+    margin-right:   -5px;
+}
+
+
+
+
+/********************************************/
 /* outputclass: tree 						*/
 
 
