bugfix: including dita-semia.less from another less file messed up the url for "key.png"

--- a/oxygen-framework/css/advanced-keyref.less
+++ b/oxygen-framework/css/advanced-keyref.less
@@ -18,7 +18,7 @@
 			action, 					oxy_action(
 				name,       '',
 				operation,  'org.DitaSemia.Oxygen.AuthorOperations.ShowKeyDefInformation',
-				icon,       '../img/key.png'),
+				icon,       url('../img/key.png')),
 			transparent,    			true,
 			enableInReadOnlyContext,	true);
 	vertical-align: middle;
