hide keyref-edit-button for keyrefs with a key set by cba:content

--- a/oxygen-framework/css/advanced-keyref.less
+++ b/oxygen-framework/css/advanced-keyref.less
@@ -65,6 +65,9 @@
 	content: "";	/* Hide the button within genrated content since it is read-only. */
 }
 
+*[*|ref][*|content]:after(@{keyref-edit-suffix-index}) {
+	content: "";	/* Hide the button when the key is set by cba:content. */
+}
 
 *[*|ref][outputclass='key-name-braced']:after(@{keyref-name-suffix-index}),
 *[*|ref][outputclass='key-name-braced!']:after(@{keyref-name-suffix-index}),
