display placeholder for topic title (was removed hidden by topic number)

--- a/oxygen-framework/css/topic-num.less
+++ b/oxygen-framework/css/topic-num.less
@@ -1,4 +1,7 @@
 
+*[class~='topic/topic'] > *[class~='topic/title'] {
+	-oxy-show-placeholder	: always;
+}
 
 *[class~='topic/topic'] > *[class~='topic/title']:before(@{topic-num-prefix-index}) {
 	content				: "?" " ";
