--- a/oxygen-framework/css/conbat/title.less
+++ b/oxygen-framework/css/conbat/title.less
@@ -3,7 +3,9 @@
 
 
 *[class~="topic/section"][*|title]:before(@{conbat-title-index}),
-*[class~="topic/dl"][*|title]:before(@{conbat-title-index}){
+*[class~="topic/dl"][*|title]:before(@{conbat-title-index}),
+*[class~="topic/ul"][*|title]:before(@{conbat-title-index}),
+*[class~="topic/ol"][*|title]:before(@{conbat-title-index}) {
 	display	: block;
     content	: oxy_label(text, attr("*|title"));
     .section-title-style();
