--- a/oxygen-framework/css/conbat/dl.less
+++ b/oxygen-framework/css/conbat/dl.less
@@ -104,7 +104,7 @@
 }
 
 
-*[class~="topic/dl"][outputclass='header-table'] > *[class~="topic/dd"][outputclass~='code'][*|dt]:before(@{conbat-dt-index}) {
+*[class~="topic/dl"][outputclass='header-table'] > *[class~="topic/dd"][*|o-class~='code'][*|dt]:before(@{conbat-dt-index}) {
 	/* undo the font changes for code */
 	font-family		: @body-font-family;
 	font-size		: (1em / @code-font-size-scale);
