--- a/oxygen-framework/css/conbat/inline-content.less
+++ b/oxygen-framework/css/conbat/inline-content.less
@@ -7,7 +7,8 @@
 *[class~="topic/sli"][*|prefix]:before(@{conbat-inline-index}),
 *[class~="topic/stentry"][*|prefix]:before(@{conbat-inline-index}),
 *[class~="topic/title"][*|prefix]:before(@{conbat-inline-index}),
-*[class~="topic/xref"][*|prefix]:before(@{conbat-inline-index}) {
+*[class~="topic/xref"][*|prefix]:before(@{conbat-inline-index}),
+*[class~="topic/dt"][*|prefix]:before(@{conbat-inline-index}) {
 	content	: attr("*|prefix");
 }
 
@@ -33,7 +34,8 @@
 *[class~="topic/sli"][*|suffix]:after(@{conbat-inline-index}),
 *[class~="topic/stentry"][*|suffix]:after(@{conbat-inline-index}),
 *[class~="topic/title"][*|suffix]:after(@{conbat-inline-index}),
-*[class~="topic/xref"][*|suffix]:after(@{conbat-inline-index}) {
+*[class~="topic/xref"][*|suffix]:after(@{conbat-inline-index}),
+*[class~="topic/dt"][*|suffix]:after(@{conbat-inline-index}) {
 	content	: attr("*|suffix");
 }
 
@@ -54,7 +56,8 @@
 *[class~="topic/sli"][*|content],
 *[class~="topic/stentry"][*|content],
 *[class~="topic/title"][*|content],
-*[class~="topic/dd"][*|content] {
+*[class~="topic/dd"][*|content],
+*[class~="topic/dt"][*|content] {
 	content	: attr("*|content");
 }
 
@@ -64,7 +67,9 @@
 *[class~="topic/sli"][*|default-content]:empty:after(@{conbat-default-content-index}),
 *[class~="topic/stentry"][*|default-content]:empty:after(@{conbat-default-content-index}),
 *[class~="topic/title"][*|default-content]:empty:after(@{conbat-default-content-index}),
-*[class~="topic/dd"][*|default-content]:empty:after(@{conbat-default-content-index}) {
+*[class~="topic/dd"][*|default-content]:empty:after(@{conbat-default-content-index}),
+*[class~="topic/dt"][*|default-content]:empty:after(@{conbat-default-content-index}),
+*[class~="topic/section"][*|default-content]:empty:after(@{conbat-default-content-index}) {
 	/* have the cursor in front of the content to suggest the author that he can overwrite it */
 	content	: attr("*|default-content");
 }
