--- a/oxygen-framework/css/config.less
+++ b/oxygen-framework/css/config.less
@@ -11,7 +11,8 @@
 @conbat-dt-index						: 17;	/* used in :before(n) for generated dts */
 
 @conbat-default-content-marker-index	: 13;	/* used in :after(n) for default content marker */
-@conbat-edit-brace1-index				: 5;	/* used in :after(n) for opening brace of attribute edits */
+@conbat-edit-brace1-index				: 4;	/* used in :after(n) for opening brace of attribute edits */
+@conbat-edit-prefix-index				: 5;	/* used in :after(n) for prefix of attribute edits */
 @conbat-edit-index						: 6;	/* used in :after(n) for attribute edits */
 @conbat-edit-brace2-index				: 7;	/* used in :after(n) for closing brace of attribute edits */
 @csli-comma-index						: 19;	/* used in :before(n) for generated commas in comma separated lists */
