renamed @cba:o-class to cba:flags, integrated hide-empty into flags

--- a/oxygen-framework/css/conbat.less
+++ b/oxygen-framework/css/conbat.less
@@ -7,8 +7,7 @@
 @import "conbat/table-header.less";
 @import "conbat/dl.less";
 @import "conbat/popup-edit.less";
-@import "conbat/o-class.less";
-@import "conbat/empty.less";
+@import "conbat/flags.less";
 
 /* optional */
 @import "conbat/set-background.less";
