--- a/oxygen-framework/css/conbat/set-background.less
+++ b/oxygen-framework/css/conbat/set-background.less
@@ -6,6 +6,7 @@
 *[*|default-content]:empty:after(@{conbat-default-content-index}),
 *[*|default-content]:empty:after(@{conbat-default-content-marker-index}),
 *[*|suffix]:after(@{conbat-inline-index}),
+*[*|suffix2]:after(@{conbat-suffix2-index}),
 *[*|code-suffix]:after(@{conbat-inline-index}),
 *[*|suffix]:after(@{conbat-paragraph-index}),
 *[*|title]:before(@{conbat-title-index}),
