--- a/oxygen-framework/css/conbat/dl.less
+++ b/oxygen-framework/css/conbat/dl.less
@@ -97,6 +97,7 @@
     -oxy-show-placeholder 	: always;
     border-top-style		: solid;
     border-top-width		: 1px;
+    min-height				: 1.55em;
 }
 
 *[class~='topic/dl'][outputclass='header-table'] > *[class~='topic/dd']:first-child {
@@ -104,7 +105,7 @@
 }
 
 
-*[class~="topic/dl"][outputclass='header-table'] > *[class~="topic/dd"][*|o-class~='code'][*|dt]:before(@{conbat-dt-index}) {
+*[class~="topic/dl"][outputclass='header-table'] > *[class~="topic/dd"][*|flags~='code'][*|dt]:before(@{conbat-dt-index}) {
 	/* undo the font changes for code */
 	font-family		: @body-font-family;
 	font-size		: (1em / @code-font-size-scale);
@@ -150,7 +151,7 @@
 }
 
 
-*[class~="topic/dl"][outputclass='parameter-table'] > *[class~="topic/dd"][*|o-class~='code'][*|dt]:before(@{conbat-dt-index}) {
+*[class~="topic/dl"][outputclass='parameter-table'] > *[class~="topic/dd"][*|flags~='code'][*|dt]:before(@{conbat-dt-index}) {
 	/* undo the font changes for code */
 	font-family		: @body-font-family;
 	font-size		: (1em / @code-font-size-scale);
