activate placeholder for title as well

--- a/oxygen-framework/css/conbat/activate-placeholder.less
+++ b/oxygen-framework/css/conbat/activate-placeholder.less
@@ -3,7 +3,8 @@
 *[*|prefix],
 *[*|suffix],
 *[*|code-prefix],
-*[*|code-suffix] {
+*[*|code-suffix],
+*[*|title]{
     -oxy-show-placeholder	: always;
 }
 
