display context of current file within map on top of root element

--- a/oxygen-framework/css/config.less
+++ b/oxygen-framework/css/config.less
@@ -2,7 +2,7 @@
 /* general */
 @conbat-background						: rgb(240, 240, 240);
 
-/* following values needs to be the same as used in java: org.DitaSemia.Oxygen.Conbat.ConbatStylesFilter */
+/* following values need to be the same as used in java: org.DitaSemia.Oxygen.Conbat.ConbatStylesFilter */
 @conbat-inline-index					: 5;	/* used in :before(n) and :after(n) for generated inline content */
 @conbat-edit-brace1-index				: 6;	/* used in :after(n) for opening brace of attribute edits */
 @conbat-edit-prefix-index				: 7;	/* used in :after(n) for prefix of attribute edits */
@@ -24,7 +24,7 @@
 @code-font-size-scale					: 0.9;
 @keydef-info-prefix-index				: 2;
 
-/* following values needs to be the same as used in java: org.DitaSemia.Oxygen.AdvancedKeyRef.AdvancedKeyRefStylesFilter */
+/* following values need to be the same as used in java: org.DitaSemia.Oxygen.AdvancedKeyRef.AdvancedKeyRefStylesFilter */
 @keyref-link-prefix-index				: 2;	
 @keyref-type-prefix-index				: 1;
 @keyref-type-suffix-index				: 1;
@@ -34,11 +34,14 @@
 @edit-only-font-size-scale				: 0.8;
 @edit-only-text-color					: rgb(140, 140, 140);
 
-@topic-num-prefix-index					: 20;	/* needs to be the same as used in java: org.DitaSemia.Oxygen.TopicNumStylesFilter */
-@map-context-root-index					: 102;	/* needs to be the same as used in java: org.DitaSemia.Oxygen.MapContextStylesFilter */
-@map-context-parent-index				: 101;	/* needs to be the same as used in java: org.DitaSemia.Oxygen.MapContextStylesFilter */
+/* following values need to be the same as used in java: org.DitaSemia.Oxygen.TopicNumStylesFilter */
+@topic-num-prefix-index					: 20;
 
-@map-context-background-color			: rgb(230, 230, 255);
+/* following values need to be the same as used in java: org.DitaSemia.Oxygen.MapContextStylesFilter */	
+@map-context-root-index					: 102;
+@map-context-parent-index				: 101;
+
+@map-context-background-color			: rgb(240, 240, 255);
 
 @keyref-autotext-background-color		: @conbat-background;
 
