--- a/oxygen-framework/css/dita-semia.less
+++ b/oxygen-framework/css/dita-semia.less
@@ -18,6 +18,11 @@
 
 @import "topic-num.less";
 
+@import "map-context.less";
+
 *:root {
-	font-family: @body-font-family;
+	font-family		: @body-font-family;
+	padding-left	: 0;
+	padding-top		: 0;
+	margin-top		: 0;
 }
