--- a/oxygen-framework/css/topic-num.less
+++ b/oxygen-framework/css/topic-num.less
@@ -12,30 +12,30 @@
 	counter-reset		: topic1;
 }
 
-*[class~='topic/topic'] > *[class~='topic/topic'] {
+*[class~='topic/topic'] *[class~='topic/topic'] {
 	counter-reset		: topic2;
 	counter-increment	: topic1;
 }
 
-*[class~='topic/topic'] > *[class~='topic/topic'] > *[class~='topic/topic'] {
+*[class~='topic/topic'] *[class~='topic/topic'] *[class~='topic/topic'] {
 	counter-reset		: topic3;
 	counter-increment	: topic2;
 }
 
-*[class~='topic/topic'] > *[class~='topic/topic'] > *[class~='topic/topic'] > *[class~='topic/topic'] {
+*[class~='topic/topic'] *[class~='topic/topic'] *[class~='topic/topic'] > *[class~='topic/topic'] {
 	counter-reset		: topic4;
 	counter-increment	: topic3;
 }
 
-*[class~='topic/topic'] > *[class~='topic/topic'] > *[class~='topic/title']:before(@{topic-num-prefix-index})  {
+*[class~='topic/topic'] *[class~='topic/topic'] *[class~='topic/title']:before(@{topic-num-prefix-index})  {
 	content				: "?" "." counter(topic1) " ";
 }
 
-*[class~='topic/topic'] > *[class~='topic/topic'] > *[class~='topic/topic'] > *[class~='topic/title']:before(@{topic-num-prefix-index})  {
+*[class~='topic/topic'] *[class~='topic/topic'] *[class~='topic/topic'] *[class~='topic/title']:before(@{topic-num-prefix-index}) {
 	content				: "?" "." counter(topic1) "." counter(topic2) " ";
 }
 
-*[class~='topic/topic'] > *[class~='topic/topic'] > *[class~='topic/topic'] > *[class~='topic/topic'] > *[class~='topic/title']:before(@{topic-num-prefix-index})  {
+*[class~='topic/topic'] *[class~='topic/topic'] *[class~='topic/topic'] *[class~='topic/topic'] *[class~='topic/title']:before(@{topic-num-prefix-index})  {
 	content				: "?" "." counter(topic1) "." counter(topic2) ".x"  " ";
 	color				: red;	/* no more supported */
 }
