don't display button to open source when source is explicitly set to empty

--- a/oxygen-framework/css/xslt-conref.less
+++ b/oxygen-framework/css/xslt-conref.less
@@ -108,8 +108,8 @@
   		!important;
 }
 
-*[*|xsl][*|source] > oxy|error:before,
-*[*|xsl][*|source] > oxy|reference:before {
+*[*|xsl][*|source]:not([*|source=""]) > oxy|error:before,
+*[*|xsl][*|source]:not([*|source=""]) > oxy|reference:before {
   	content: 
   		@OpenXsltConrefScriptButton
   		@OpenXsltConrefSourceButton
