handle li-title with code-flag

--- a/oxygen-framework/css/conbat/flags.less
+++ b/oxygen-framework/css/conbat/flags.less
@@ -9,7 +9,8 @@
 *[class~="topic/stentry"][*|flags~="code"],
 *[class~="topic/sli"][*|flags~="code"],
 *[class~="topic/p"][*|flags~="code"],
-*[class~="topic/section"] > *[class~="topic/title"][*|flags~="code"] {
+*[class~="topic/section"] > *[class~="topic/title"][*|flags~="code"],
+*[class~="topic/li"] > *[class~="topic/title"][*|flags~="code"] {
 	font-family : @code-font-family;
 	font-size 	: (1em * @code-font-size-scale);
 }
