--- a/oxygen-framework/css/conbat/inline-content.less
+++ b/oxygen-framework/css/conbat/inline-content.less
@@ -90,3 +90,26 @@
 	content	: attr("*|default-content");
 }
 
+*[*|default-content][*|flags~='default-italic']:empty:after(@{conbat-default-content-index}) {
+	font-style	: italic;
+}
+
+*[*|default-content][*|flags~='code'][*|flags~='default-italic']:empty:after(@{conbat-default-content-index}) {
+	/* undo the font changes for codeph */
+	font-family	: @body-font-family;
+	font-size	: (1em / @code-font-size-scale);
+}
+
+*[class~="topic/p"]			[*|default-content][*|flags~='code']:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
+*[class~="topic/ph"]		[*|default-content][*|flags~='code']:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
+*[class~="topic/sli"]		[*|default-content][*|flags~='code']:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
+*[class~="topic/stentry"]	[*|default-content][*|flags~='code']:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
+*[class~="topic/title"]		[*|default-content][*|flags~='code']:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
+*[class~="topic/dd"]		[*|default-content][*|flags~='code']:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
+*[class~="topic/dt"]		[*|default-content][*|flags~='code']:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}),
+*[class~="topic/section"]	[*|default-content][*|flags~='code']:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index})
+*[class~="topic/p"]			[*|default-content][*|flags~='code']:not([*|flags~="hide-empty"]):empty:after(@{conbat-default-content-marker-index}){
+	/* undo the font changes for codeph */
+	font-family	: @body-font-family;
+	font-size	: (1em / @code-font-size-scale * @edit-only-font-size-scale);
+}
