use combobox only for popup-edit on text not attributes

--- a/oxygen-framework/css/conbat/popup-edit.less
+++ b/oxygen-framework/css/conbat/popup-edit.less
@@ -2,12 +2,11 @@
 /* rules for popup-edit of attributes */
 
 *[*|popup-edit]:not([*|popup-edit='#text']):after(@{conbat-edit-index}) {
-	content: oxy_combobox(
+	content: oxy_popup(
 			edit,			oxy_concat('@', attr('*|popup-edit')),
-			//selectionMode,	single,
+			selectionMode,	single,
 			fontInherit,	true,
-			color,			inherit,
-			editable, 		false);
+			color,			inherit);
 }
 
 *[*|popup-edit][*|flags~='pe-italic']:not([*|popup-edit='#text']):after(@{conbat-edit-index}) {
@@ -16,14 +15,13 @@
 
 
 *[*|popup-edit][*|pe-values][*|pe-labels]:not([*|popup-edit='#text']):after(@{conbat-edit-index}) {
-	content: oxy_combobox(
+	content: oxy_popup(
 			edit,			oxy_concat('@', attr('*|popup-edit')),
 			values,			attr('*|pe-values'),
 			labels,			attr('*|pe-labels'),
-			//selectionMode,	single,
+			selectionMode,	single,
 			fontInherit,	true,
-			color,			inherit,
-			editable, 		false);
+			color,			inherit);
 }
 
 *[*|flags~="pe-braced"][*|popup-edit]:after(@{conbat-edit-brace1-index}) {
