--- a/oxygen-framework/css/conbat/flags.less
+++ b/oxygen-framework/css/conbat/flags.less
@@ -37,3 +37,12 @@
 	font-size: 		@edit-only-font-size-scale;
 	color: 			@edit-only-text-color;
 }
+
+
+/********************************************/
+/* flag: hide								*/
+
+*[*|flags~="hide"] {
+	font-size: 		@edit-only-font-size-scale;
+	color: 			@edit-only-text-color;
+}
